ENH: Add vtkImageStack and image layer numbers.

--- a/Rendering/CMakeLists.txt
+++ b/Rendering/CMakeLists.txt
@@ -78,7 +78,9 @@ SET( Kit_SRCS
   vtkImageProperty.cxx
   vtkImageResliceMapper.cxx
   vtkImageSlice.cxx
+  vtkImageSliceCollection.cxx
   vtkImageSliceMapper.cxx
+  vtkImageStack.cxx
   vtkImageViewer2.cxx
   vtkImageViewer.cxx
   vtkImagingFactory.cxx
