--- a/Examples/ParallelProcessing/Generic/Cxx/CMakeLists.txt
+++ b/Examples/ParallelProcessing/Generic/Cxx/CMakeLists.txt
@@ -28,6 +28,6 @@ IF (VTK_USE_MPI)
    TARGET_LINK_LIBRARIES(TaskParallelism "-framework Carbon")
   ENDIF(APPLE AND VTK_USE_CARBON)
   
-  ADD_EXECUTABLE(SimpleBenchmark SimpleBenchmark.cxx)
-  TARGET_LINK_LIBRARIES(SimpleBenchmark vtkParallel ${MPI_LIBRARIES} )
+#  ADD_EXECUTABLE(SimpleBenchmark SimpleBenchmark.cxx)
+#  TARGET_LINK_LIBRARIES(SimpleBenchmark vtkParallel ${MPI_LIBRARIES} )
 ENDIF (VTK_USE_MPI)
