Enable CubeAxes3 C++ test.
Change-Id: Iaf775ddf383c0540707050187bdd1954e001ecf9

--- a/Hybrid/Testing/Cxx/CMakeLists.txt
+++ b/Hybrid/Testing/Cxx/CMakeLists.txt
@@ -8,7 +8,7 @@ IF (VTK_DATA_ROOT)
   # add tests that require data
   SET(MyTests ${MyTests}
 #    TestAxisActor3D.cxx
-#    TestCubeAxes3.cxx
+    TestCubeAxes3.cxx
     TestBarChartActor.cxx
     TestExodusImplicitArrays.cxx
     #TestLabelPlacerExodus.cxx
