ENH: AMR base reader abstract class
Adding base AMR reader class which encapsulates
common functionality, i.e, UI components and
Point/Cell data array selection that all concrete
AMR readers can inherit.

--- a/AMR/CMakeLists.txt
+++ b/AMR/CMakeLists.txt
@@ -13,6 +13,11 @@ FILE( GLOB Kit_SRCS *.cxx )
 SET(KIT_LIBS vtkParallel vtkCommon vtkFiltering)
 
 SET_SOURCE_FILES_PROPERTIES(
+    vtkAMRBaseReader
+    ABSTRACT
+)
+
+SET_SOURCE_FILES_PROPERTIES(
   vtkAMRGridIndexEncoder
   vtkAMRLink
   WRAP_EXCLUDE
