ENH: Add vtkSimplePointsWriter and test
Change-Id: Idaa91508a97a3d23d0631779c533454ccc3ba040

--- a/IO/CMakeLists.txt
+++ b/IO/CMakeLists.txt
@@ -130,6 +130,7 @@ vtkSLCReader.cxx
 vtkSTLReader.cxx
 vtkSTLWriter.cxx
 vtkSimplePointsReader.cxx
+vtkSimplePointsWriter.cxx
 vtkSortFileNames.cxx
 vtkStructuredGridReader.cxx
 vtkStructuredGridWriter.cxx
