ENH: Added Orientation property to vtkChartBar
Default orientation (VERTICAL) is the existing functionality.
New HORIZONTAL orientation has X-axis oriented up-down and
bar values growing left-right.

Change-Id: I00fbf3b7c4ebf0b0e589eaecdfb2bc31fcc4651a

--- a/Charts/Testing/Cxx/CMakeLists.txt
+++ b/Charts/Testing/Cxx/CMakeLists.txt
@@ -14,6 +14,7 @@ IF (VTK_USE_RENDERING AND VTK_USE_VIEWS)
     SET(MyTests ${MyTests}
       #TestContextUnicode.cxx # Disabled until Freetype unicode works
       TestBarGraph.cxx
+      TestBarGraphHorizontal.cxx
       TestContext.cxx
       TestContextImage.cxx
       TestDiagram.cxx
