ENH: Increment MTime atomically on gcc (avoid mutex).
For gcc >= 4.1 and clang >= 2.0 there are builtin functions
for various atomic operations.  For efficiency, these should
be used in place of a mutex when incrementing the MTime.

Change-Id: Id8ca6fa8c4645f5fb20f1ab11a4c574b3f4bb03f

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -503,6 +503,9 @@ INCLUDE(vtkTestFullSpecialization)
 # Check for explicit template instantiation support by compiler.
 INCLUDE(vtkTestExplicitInstantiation)
 
+# Test for atomics and other compiler intrinsics
+INCLUDE(vtkTestBuiltins)
+
 # Setup clean configuration of vtkConfigure.h and vtkToolkits.h.
 MACRO(VTK_PREPARE_CMAKEDEFINE not invar outvar)
   IF(${not} ${invar})
