Add appropriate install rule for vtkTestingObjectFactory.cmake.
Change-Id: Iba4a01ba8abe84440230ab9ed4764f40370b7e38

--- a/Rendering/CMakeLists.txt
+++ b/Rendering/CMakeLists.txt
@@ -813,6 +813,12 @@ IF(NOT VTK_INSTALL_NO_DEVELOPMENT)
     DESTINATION ${VTK_INSTALL_INCLUDE_DIR_CM24}
     COMPONENT Development
     )
+
+  INSTALL(FILES
+    ${CMAKE_CURRENT_SOURCE_DIR}/vtkTestingObjectFactory.cmake
+    DESTINATION ${VTK_INSTALL_PACKAGE_DIR_CM24}/CMake
+    COMPONENT Development
+    )
 ENDIF(NOT VTK_INSTALL_NO_DEVELOPMENT)
 
 IF (VTK_WRAP_PYTHON AND VTK_USE_TK AND TK_FOUND)
