--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -266,13 +266,26 @@ ENDIF(NOT VTK_INSTALL_JAVA_DIR)
 # switch library installation on and off correctly we make the
 # decision here.
 SET(VTK_INSTALL_NO_LIBRARIES)
+
+IF(NOT DEFINED VTK_INSTALL_DEVELOPMENT)
+  SET(VTK_INSTALL_DEVELOPMENT ON CACHE BOOL "Install headers, link libraries and other files used for development" FORCE )
+ENDIF()
+
+IF(NOT DEFINED VTK_INSTALL_NO_DEVELOPMENT)
+  IF(VTK_INSTALL_DEVELOPMENT)
+    SET(VTK_INSTALL_NO_DEVELOPMENT OFF)
+  ELSE()
+    SET(VTK_INSTALL_NO_DEVELOPMENT ON)
+  ENDIF()
+ENDIF()
+
 IF(BUILD_SHARED_LIBS)
   IF(VTK_INSTALL_NO_RUNTIME AND VTK_INSTALL_NO_DEVELOPMENT)
-    SET(VTK_INSTALL_NO_LIBRARIES 1)
+    SET(VTK_INSTALL_NO_LIBRARIES ON)
   ENDIF(VTK_INSTALL_NO_RUNTIME AND VTK_INSTALL_NO_DEVELOPMENT)
 ELSE(BUILD_SHARED_LIBS)
   IF(VTK_INSTALL_NO_DEVELOPMENT)
-    SET(VTK_INSTALL_NO_LIBRARIES 1)
+    SET(VTK_INSTALL_NO_LIBRARIES ON)
   ENDIF(VTK_INSTALL_NO_DEVELOPMENT)
 ENDIF(BUILD_SHARED_LIBS)
 
@@ -1487,6 +1500,9 @@ IF(NOT VTK_INSTALL_NO_DEVELOPMENT)
     DESTINATION ${VTK_INSTALL_PACKAGE_DIR_CM24}
     COMPONENT Development)
 ENDIF(NOT VTK_INSTALL_NO_DEVELOPMENT)
+
+# Install rules for fixing up vtkpython
+ADD_SUBDIRECTORY(Utilities/Release)
 
 # Setup CPack
 INCLUDE(VTKCPack.cmake)
