Load vtkTestingObjectFactory from module path instead of full file path.
Change-Id: I087c80d66752263176af2457c4463f359a9d376a

--- a/Examples/IO/Cxx/CMakeLists.txt
+++ b/Examples/IO/Cxx/CMakeLists.txt
@@ -16,7 +16,7 @@ TARGET_LINK_LIBRARIES(ParticleReader vtkHybrid)
 SET(KIT IOExamples)
 SET(MyTests TestDumpXMLFile.cxx TestParticleReader.cxx)
 
-INCLUDE(${VTK_SOURCE_DIR}/Rendering/vtkTestingObjectFactory.cmake)
+INCLUDE(vtkTestingObjectFactory)
 
 ADD_EXECUTABLE(${KIT}CxxTests ${KIT}CxxTests.cxx
                ${MyTests})
