--- a/Examples/VisualizationAlgorithms/Cxx/CMakeLists.txt
+++ b/Examples/VisualizationAlgorithms/Cxx/CMakeLists.txt
@@ -24,7 +24,7 @@ SET(MyTests
     TestBandedContours.cxx
 )
 
-INCLUDE(${VTK_SOURCE_DIR}/Rendering/vtkTestingObjectFactory.cmake)
+INCLUDE(vtkTestingObjectFactory)
 ADD_EXECUTABLE(${KIT}CxxTests ${KIT}CxxTests.cxx
                ${MyTests})
 TARGET_LINK_LIBRARIES(${KIT}CxxTests vtkHybrid)
