--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -419,6 +419,11 @@ ENDIF(NOT "VTK_USE_VOLUMERENDERING" MATCHES "^VTK_USE_VOLUMERENDERING$")
 
 SET(VTK_KITS COMMON FILTERING IO GRAPHICS GENERIC_FILTERING IMAGING)
 
+# Include Rendering in module path to find vtkTestingObjectFactory
+IF(VTK_USE_RENDERING)
+  SET(CMAKE_MODULE_PATH "${VTK_SOURCE_DIR}/Rendering/" ${CMAKE_MODULE_PATH})
+ENDIF()
+
 IF(VTK_USE_RENDERING)
   SET(VTK_KITS ${VTK_KITS} RENDERING)
   SET(VTK_KITS ${VTK_KITS} VOLUMERENDERING)
