Don't use fixup_bundle on Apple for now.
Someday we could possibly make vtkpyhon an app instead of a unix like command line executable.

Change-Id: Ic9dad65bcb9c10b9a6b4f3646df235ce2cb89392

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1508,7 +1508,7 @@ IF(NOT VTK_INSTALL_NO_DEVELOPMENT)
 ENDIF(NOT VTK_INSTALL_NO_DEVELOPMENT)
 
 # Use fixup_bundle to pull in vtk and vtkpython dependencies
-IF(VTK_INSTALL_THIRD_PARTY_LIBRARIES)
+IF(VTK_INSTALL_THIRD_PARTY_LIBRARIES AND NOT APPLE)
   ADD_SUBDIRECTORY(Utilities/Release)
 ENDIF()
 
