Add a configured VTK_LIBRARIES variable.
This will contain the target names of just the primary VTK kits.

Change-Id: I1d57e44078badd4b57f569747e7e8f1577731e36

--- a/VTKConfig.cmake.in
+++ b/VTKConfig.cmake.in
@@ -6,6 +6,9 @@
 # to load VTK's settings for an external project.
 @VTK_CONFIG_INSTALL_ONLY@
 
+# The set of VTK libraries
+SET(VTK_LIBRARIES "@VTK_LIBRARIES@")
+
 # The VTK include file directories.
 SET(VTK_INCLUDE_DIRS "@VTK_INCLUDE_DIRS_CONFIG@")
 
