Updated cube axes, added new follower
New cube axes greatly improves the quality of visualization. vtkAxesFollower
ensures that labels and titles are always aligned to the axis its following.

--- a/Rendering/CMakeLists.txt
+++ b/Rendering/CMakeLists.txt
@@ -34,6 +34,7 @@ SET( Kit_SRCS
   vtkAreaPicker.cxx
   vtkMapArrayValues.cxx
   vtkAssembly.cxx
+  vtkAxesFollower.cxx
   vtkAxisActor2D.cxx
   vtkCamera.cxx
   vtkCameraActor.cxx
