ENH: Added a new test for plots not shown in the legend.
This test shows two of the plot series in the legend, but hides the
third one, sometimes desirable in certain circumstances.

Change-Id: I090ca5d304042b8d500bb1c89e0b780902c4aab9

--- a/Charts/Testing/Cxx/CMakeLists.txt
+++ b/Charts/Testing/Cxx/CMakeLists.txt
@@ -1,6 +1,5 @@
 # if we have rendering and views add the following tests
-IF (VTK_USE_RENDERING AND VTK_USE_VIEWS)
-
+IF(VTK_USE_RENDERING AND VTK_USE_VIEWS)
 
   SET(KIT Charts)
   # add tests that do not require data
@@ -21,6 +20,7 @@ IF (VTK_USE_RENDERING AND VTK_USE_VIEWS)
       #TestFreeTypeContextUnicode.cxx
       #TestFreeTypeRender.cxx
       TestHistogram2D.cxx
+      TestLegendHiddenPlots.cxx
       TestLinePlot.cxx
       TestLinePlotInteraction.cxx
       TestMultipleChartRenderers.cxx
