--- a/Infovis/Testing/Cxx/CMakeLists.txt
+++ b/Infovis/Testing/Cxx/CMakeLists.txt
@@ -136,10 +136,10 @@ IF (VTK_USE_RENDERING AND VTK_USE_DISPLAY)
     ADD_EXECUTABLE(TestParallelKMeansStatisticsMPI TestParallelKMeansStatisticsMPI.cxx)
     TARGET_LINK_LIBRARIES(TestParallelKMeansStatisticsMPI vtkInfovis vtkParallel ${MPI_LIBRARIES})
 
-    # TestRealDataPCorrelativeStatisticsMPI:
-    # MPI test of parallel correlative statistics with real data
-    ADD_EXECUTABLE(TestRealDataPCorrelativeStatisticsMPI TestRealDataPCorrelativeStatisticsMPI.cxx)
-    TARGET_LINK_LIBRARIES(TestRealDataPCorrelativeStatisticsMPI vtkInfovis vtkParallel ${MPI_LIBRARIES})
+    # TestRealDataPDescriptiveStatisticsMPI:
+    # MPI test of parallel descriptive statistics with real data
+    ADD_EXECUTABLE(TestRealDataPDescriptiveStatisticsMPI TestRealDataPDescriptiveStatisticsMPI.cxx)
+    TARGET_LINK_LIBRARIES(TestRealDataPDescriptiveStatisticsMPI vtkInfovis vtkParallel ${MPI_LIBRARIES})
 
     IF (VTK_MPIRUN_EXE)
       ADD_TEST(TestParallelRandomStatisticsMPI
@@ -170,10 +170,10 @@ IF (VTK_USE_RENDERING AND VTK_USE_DISPLAY)
         ${VTK_MPI_POSTFLAGS}
         )
 
-      ADD_TEST(TestRealDataPCorrelativeStatisticsMPI
+      ADD_TEST(TestRealDataPDescriptiveStatisticsMPI
         ${VTK_MPIRUN_EXE} ${VTK_MPI_PRENUMPROC_FLAGS} ${VTK_MPI_NUMPROC_FLAG} ${VTK_MPI_MAX_NUMPROCS}
         ${VTK_MPI_PREFLAGS}
-        ${CXX_TEST_PATH}/${CXX_TEST_CONFIG}/TestRealDataPCorrelativeStatisticsMPI
+        ${CXX_TEST_PATH}/${CXX_TEST_CONFIG}/TestRealDataPDescriptiveStatisticsMPI
         ${VTK_MPI_POSTFLAGS}
         )
     ENDIF (VTK_MPIRUN_EXE)
