Work in progress
Change-Id: I84dce97b2eba7b94430e8bd11ba7f36e9328becc

--- a/Rendering/CMakeLists.txt
+++ b/Rendering/CMakeLists.txt
@@ -34,7 +34,7 @@ SET( Kit_SRCS
   vtkAreaPicker.cxx
   vtkMapArrayValues.cxx
   vtkAssembly.cxx
-  vtkAxesFollower.cxx
+  vtkAxisFollower.cxx
   vtkAxisActor2D.cxx
   vtkCamera.cxx
   vtkCameraActor.cxx
