ENH: New test of static chart on 3D scene.
This tests a 2D chart drawn over a 3D scene. Currently the interactor is
only set for the 3D scene, and so the chart is static.

Change-Id: Ie305beed09b37c26114c653bcd900802ace1ae2e

--- a/Charts/Testing/Cxx/CMakeLists.txt
+++ b/Charts/Testing/Cxx/CMakeLists.txt
@@ -15,6 +15,7 @@ IF(VTK_USE_RENDERING AND VTK_USE_VIEWS)
       TestBarGraph.cxx
       TestBarGraphHorizontal.cxx
       TestColorTransferFunction.cxx
+      TestChartsOn3D.cxx
       TestContext.cxx
       TestContextImage.cxx
       TestDiagram.cxx
