--- a/Examples/AMR/Cxx/CMakeLists.txt
+++ b/Examples/AMR/Cxx/CMakeLists.txt
@@ -43,6 +43,19 @@ TARGET_LINK_LIBRARIES( AMRDataTransferPipeline
              ${VTK_HDF5_LIBRARIES}
              )
 
+## Add AMRDataTransferPipeline executable
+ADD_EXECUTABLE(enzo2vth enzo2vth.cxx)
+TARGET_LINK_LIBRARIES( enzo2vth 
+             vtkGraphics
+             vtkFiltering
+             vtkRendering 
+             vtkIO 
+             vtkAMR 
+             vtkParallel
+             ${MPI_LIBRARIES} 
+             ${VTK_HDF5_LIBRARIES}
+             )
+             
 ## Add AMRDualExtractor executable
 ADD_EXECUTABLE( AMRDualExtractor AMRDualExtractor.cxx )
 TARGET_LINK_LIBRARIES( AMRDualExtractor 
