ENH: Wrap operator [] as python sequence protocol.
This wraps operator[] when the index is an integer type.
Also fix minor issues with "<<" and "< <= == != >= >" operators.

--- a/Common/Testing/Python/CMakeLists.txt
+++ b/Common/Testing/Python/CMakeLists.txt
@@ -21,6 +21,7 @@ IF (VTK_PYTHON_EXE)
     FOREACH ( tfile
       TestStrings
       TestVariant
+      TestOperators
       )
       ADD_TEST(${tfile}Python ${VTK_PYTHON_EXE}
         ${VTK_SOURCE_DIR}/Common/Testing/Python/${tfile}.py)
