ENH:Internal enzo reader separation of API/impl
Sepate the Internal AMR enzo reader API and implementation
into a header file and a *.cxx file respectively. This is
done to avoid multiple definition errors when included from
both the vtkAMREnzoReader and the vtkAMREnzoParticlesReader.

--- a/AMR/CMakeLists.txt
+++ b/AMR/CMakeLists.txt
@@ -21,6 +21,7 @@ SET_SOURCE_FILES_PROPERTIES(
 SET_SOURCE_FILES_PROPERTIES(
   vtkAMRGridIndexEncoder
   vtkAMRLink
+  vtkAMREnzoReaderInternal
   WRAP_EXCLUDE
 )
 ## Include CMAKE code common to all kits
