Adding in a test for vtkMPASReader.
The reader is a NetCDF reader and can process the file
in either a plane or a sphere.  I'm trying to test both
by using 2 actors.  That's why the baseline image may
look a bit funky.

Change-Id: Ic5f5be85797c93bae4aad64ab2c12a34805c1976

--- a/IO/Testing/Cxx/CMakeLists.txt
+++ b/IO/Testing/Cxx/CMakeLists.txt
@@ -18,6 +18,7 @@ IF(VTK_USE_DISPLAY AND VTK_USE_RENDERING)
   SET(ConditionalTests
     ${ConditionalTests}
     TestHyperOctreeIO.cxx
+    TestMPASReader.cxx
     TestPLYReader.cxx
     TestProStarReader.cxx
     TestTecplotReader.cxx
@@ -170,6 +171,10 @@ IF (VTK_LARGE_DATA_ROOT)
          TestNetCDFPOPReader -D ${VTK_LARGE_DATA_ROOT}
          -T ${VTK_BINARY_DIR}/Testing/Temporary
          -V ${VTK_LARGE_DATA_ROOT}/Baseline/${KIT}/TestNetCDFPOPReader.png)
+    ADD_TEST(TestMPASReader ${CXX_TEST_PATH}/${KIT}CxxTests
+         TestMPASReader -D ${VTK_LARGE_DATA_ROOT}
+         -T ${VTK_BINARY_DIR}/Testing/Temporary
+         -V ${VTK_LARGE_DATA_ROOT}/Baseline/${KIT}/TestMPASReader.png)
     IF(NOT WIN32)
       ADD_TEST(SLACParticleReader ${CXX_TEST_PATH}/${KIT}CxxTests
            SLACParticleReader -D ${VTK_LARGE_DATA_ROOT}
