COMP: Exclude internal flash reader from wrapping.
Add vtkFlashReaderInternal in the list of sources
that are excluded from wrapping.

--- a/AMR/CMakeLists.txt
+++ b/AMR/CMakeLists.txt
@@ -22,6 +22,7 @@ SET_SOURCE_FILES_PROPERTIES(
   vtkAMRGridIndexEncoder
   vtkAMRLink
   vtkAMREnzoReaderInternal
+  vtkAMRFlashReaderInternal
   WRAP_EXCLUDE
 )
 ## Include CMAKE code common to all kits
