Added test for stereo using deering
Change-Id: I2acdf1fc9dba68668650269fed5c5032ce1a967b

--- a/Rendering/Testing/Cxx/CMakeLists.txt
+++ b/Rendering/Testing/Cxx/CMakeLists.txt
@@ -18,6 +18,7 @@ IF(VTK_USE_DISPLAY)
     ${RenderingTestsWithArguments}
     LoadOpenGLExtension.cxx
     TestActorLightingFlag.cxx
+    TestAnaglyphicStereo.cxx
     TestAnimationScene.cxx
     TestBlurAndSobelPasses.cxx
     TestDynamic2DLabelMapper.cxx
