ENH: Wrap templated types in python.
This patch wraps vtkVector, vtkRect, and vtkColor, vtkDenseArray,
and vtkSparseArray and makes them usable from python.  These objects
can be instantiated by including the template args in square brackets,
e.g. vtkVector['float32',3](), or by using the specializations that
have already been provided in C++ such as vtkVector3f.

Change-Id: I5304da8409de67bd104bf75d52b9af7462705099

--- a/Common/CMakeLists.txt
+++ b/Common/CMakeLists.txt
@@ -341,7 +341,6 @@ vtkArrayIterator
 vtkArrayIteratorTemplate
 vtkAbstractTransform
 vtkCallbackCommand
-vtkColor
 vtkCommand
 vtkCommonInformationKeyManager
 vtkDataArray
@@ -380,10 +379,8 @@ vtkParametricFunction
 vtkProp
 vtkRandomSequence
 vtkScalarsToColors
-vtkRect
 vtkSocket
 vtkStructuredData
-vtkVector
 vtkWarpTransform
 vtkWindow
 ABSTRACT
@@ -427,8 +424,11 @@ SET_SOURCE_FILES_PROPERTIES(
 )
 
 SET_SOURCE_FILES_PROPERTIES(
+  vtkColor.h
+  vtkRect.h
   vtkTimeStamp.cxx
   vtkVariant.cxx
+  vtkVector.h
 
   PROPERTIES WRAP_SPECIAL 1
 )
@@ -449,6 +449,10 @@ IF(VTK_USE_N_WAY_ARRAYS)
     vtkArrayRange.cxx
     vtkArraySort.cxx
     vtkArrayWeights.cxx
+    vtkDenseArray.h
+    vtkSparseArray.h
+    vtkTypedArray.h
+    vtkTypeTemplate.h
     )
 
   SET_SOURCE_FILES_PROPERTIES(
@@ -463,7 +467,19 @@ IF(VTK_USE_N_WAY_ARRAYS)
     vtkArrayRange.cxx
     vtkArraySort.cxx
     vtkArrayWeights.cxx
+    vtkDenseArray.h
+    vtkSparseArray.h
+    vtkTypedArray.h
+    vtkTypeTemplate.h
     WRAP_EXCLUDE
+    )
+
+  SET_SOURCE_FILES_PROPERTIES(
+    vtkDenseArray.h
+    vtkSparseArray.h
+    vtkTypedArray.h
+    vtkTypeTemplate.h
+    HEADER_FILE_ONLY
     )
 
   SET_SOURCE_FILES_PROPERTIES(
@@ -473,6 +489,10 @@ IF(VTK_USE_N_WAY_ARRAYS)
     vtkArrayRange.cxx
     vtkArraySort.cxx
     vtkArrayWeights.cxx
+    vtkDenseArray.h
+    vtkSparseArray.h
+    vtkTypedArray.h
+    vtkTypeTemplate.h
     PROPERTIES WRAP_SPECIAL 1
   )
 
@@ -538,7 +558,6 @@ IF(NOT VTK_INSTALL_NO_DEVELOPMENT)
     vtkABI.h
     vtkArrayIteratorTemplate.h
     vtkDataArrayTemplate.h
-    vtkDenseArray.h
     vtkIOStream.h
     vtkIOStreamFwd.h
     vtkNew.h
@@ -547,8 +566,6 @@ IF(NOT VTK_INSTALL_NO_DEVELOPMENT)
     vtkSystemIncludes.h
     vtkTemplateAliasMacro.h
     vtkType.h
-    vtkTypedArray.h
-    vtkTypeTemplate.h
     vtkTypeTraits.h
     vtkVariantCast.h
     vtkVariantInlineOperators.h
