--- a/Common/Testing/Python/CMakeLists.txt
+++ b/Common/Testing/Python/CMakeLists.txt
@@ -8,6 +8,7 @@ IF (VTK_PYTHON_EXE)
       TestGhost
       TestMutable
       TestSubClass
+      TestTemplates
       TestWeakref
       TestNumpySupport
       TestTerminationCrash
