--- a/AMR/CMakeLists.txt
+++ b/AMR/CMakeLists.txt
@@ -1,16 +1,16 @@
 ## Set the Kit name
 SET(KIT AMR)
 SET(UKIT AMR)
-SET(KIT_TCL_LIBS vtkCommonTCL vtkFilteringTCL vtkParallelTCL)
-SET(KIT_PYTHON_LIBS vtkCommonPythonD vtkFilteringPythonD vtkParallelPythonD)
-SET(KIT_JAVA_LIBS vtkCommonJava vtkFilteringJava vtkParallelJava)
-SET(KIT_INTERFACE_LIBRARIES vtkCommon vtkFiltering vtkParallel)
+SET(KIT_TCL_LIBS vtkCommonTCL vtkFilteringTCL vtkParallelTCL vtkGenericFilteringTCL )
+SET(KIT_PYTHON_LIBS vtkCommonPythonD vtkFilteringPythonD vtkParallelPythonD vtkGenericFilteringPythonD )
+SET(KIT_JAVA_LIBS vtkCommonJava vtkFilteringJava vtkParallelJava vtkGenericFilteringJava )
+SET(KIT_INTERFACE_LIBRARIES vtkCommon vtkFiltering vtkParallel vtkGenericFiltering )
 
 ## Get the kit sources
 FILE( GLOB Kit_SRCS *.cxx )
 
 ## Set the libraries required by this kit
-SET(KIT_LIBS vtkParallel vtkCommon vtkFiltering ${VTK_HDF5_LIBRARIES})
+SET(KIT_LIBS vtkParallel vtkCommon vtkFiltering vtkGenericFiltering ${VTK_HDF5_LIBRARIES})
 
 SET_SOURCE_FILES_PROPERTIES(
     vtkAMRBaseReader
